# libada

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml  package.xml
.ci/: after_failure.sh  before_install_catkin.sh  build_docs.sh  install.sh  install_linux_catkin.sh  script.sh  script_catkin.sh
.ci/docker/: env.list  ubuntu-bionic
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-test.yml  docs.yml
cmake/: External_GTest.cmake
config/: controllers.yaml  gen2_6dof.yaml  gen2_6dof_config.yaml  gen2_6dof_controllers.yaml  gen2_6dof_hardware.yaml  gen2_apriltag.yaml  gen3_6dof.yaml  gen3_6dof_config.yaml  gen3_6dof_controllers.yaml  gen3_6dof_old.yaml  gen3_7dof.yaml
include/libada/: Ada.hpp  AdaFingerKinematicSimulationPositionCommandExecutor.hpp  AdaHand.hpp  AdaHandKinematicSimulationPositionCommandExecutor.hpp  AdaMover.hpp  util.hpp
include/libada/detail/: Ada-impl.hpp  util-impl.hpp
launch/: controllers.launch  default.launch  default_new.launch  gen2_hardware.launch  gen2_urdf.launch  gen3_hardware.launch  gen3_urdf.launch  hardware.launch  libada.launch  offline_camera_calibration.launch  simple_perception.launch  simulation.launch
launch/DEPRECATED/: default.launch  simulation.launch  state_publisher.launch
python/adapy/: ada_bindings.cpp  adapy.cpp  aikido_bindings.cpp  aikido_py.cpp  dart_bindings.cpp  dart_py.cpp  ik_bindings.cpp  pr_tsr_bindings.cpp  pr_tsr_py.cpp
python/scripts/: README.md  collision_example.py  key_demo.py  simple_trajectories.py  tsr_example.py
python/tests/: simple_trajectories.py  test_collisions.py
resources/: configurations.yaml  g2_6d_named_configs.yaml  gen3_robotiq_2f_85_preshapes.yaml  preshapes.yaml  tsr_transforms.yaml
scripts/: 01_joint_state_controller.sh  camera_calibration_tag.py  offline_camera_calibration.py  start_ada_tmux.sh
src/: Ada.cpp  AdaFingerKinematicSimulationPositionCommandExecutor.cpp  AdaHand.cpp  AdaHandKinematicSimulationPositionCommandExecutor.cpp  AdaMover.cpp  util.cpp
src/adapy/: ada_py.cpp  adapy.cpp  aikido_py.cpp  dart_py.cpp  ik_py.cpp  pr_tsr_py.cpp
src/ikfast/: CMakeLists.txt  SharedLibraryAdaIkFast.hpp  ada_2018_04_23_ik.cpp  ada_2018_05_07_ik.cpp  ada_2018_05_08_ik.cpp
src/libada/: Ada.cpp  AdaFingerKinematicSimulationPositionCommandExecutor.cpp  AdaHand.cpp
src/scripts/: simple_trajectories.py  test_collisions.py
tests/: CMakeLists.txt  config.hpp.in  test_ikFast.cpp
tests/ikfast/: test_ikFast.cpp
tools/: check_format.sh  genIKFast.py
