<?xml version="1.0"?>
<package format="2">
  <name>libada</name>
  <version>0.3.0</version>
  <description>C++ library for simulating and running ADA based on DART</description>
  <maintainer email="ekgordon@cs.uw.edu">Ethan K Gordon</maintainer>
  <author email="tapomayukh@cornell.edu">Tapomayukh Bhattacharjee</author>
  <author email="danielga@uw.edu">Daniel Gallenberger</author>
  <license>BSD</license>
  <depend>dartsim</depend>
  <depend>eigen</depend>
  <depend>aikido</depend>
  <depend>controller_manager_msgs</depend>
  <depend>roslib</depend>
  <depend>srdfdom</depend>
  <depend>urdf</depend>
  <depend>pr_tsr</depend>

  <!-- Workaround to build DART with optional features enabled. -->
  <depend>nlopt</depend>

  <doc_depend>doxygen</doc_depend>

  <exec_depend>ada_description</exec_depend>
  <!-- This is required by REP-136. -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <buildtool_depend>clang-format</buildtool_depend>
  <buildtool_depend>lcov</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <test_depend>pr_assets</test_depend>
</package>
